--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
+    "postinstall": "npm run build",
     "lint": "eslint . --ext .ts",
     "test": "jest"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
+    "express-rate-limit": "^6.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   },
@@ -36,3 +40,4 @@
     "typescript": "^5.0.4"
   }
 }
+
