--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
-    "postinstall": "npm run build",
+    "heroku-postbuild": "npm run build",
     "lint": "eslint . --ext .ts",
     "test": "jest"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "10.x"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -22,15 +23,15 @@
     "express-rate-limit": "^6.11.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "typescript": "^5.0.4"
-  },
-  "devDependencies": {
+    "typescript": "^5.0.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3"
+  },
+  "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
-    "@types/swagger-jsdoc": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
